# ingestion-deploy

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.ingestion-api  Dockerfile.ingestion-worker  INTEGRATION.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ✨-feature.md  🐞bug.md  🚀deploy.md  🛠️refactor.md
.github/workflows/: build-and-deploy.yml  build-ingestion-stack.yml
.github/workflows/_core/: build-and-deploy.yml
.venv311/: pyvenv.cfg
app/: AGENTS.md  CLAUDE.md  __init__.py  config.py  telemetry.py
app/adapters/: __init__.py  atlassian.py  base.py  confluence_trash.py  factory.py  json_fixture.py
app/api/: __init__.py  deps.py  ingest_completion.py  main.py  routes.py  webhook_routes.py
app/ingestion/: __init__.py  attachment_analyzer.py  attachment_downloader.py  bootstrap.py  crawler.py  document_analyzer.py  embedding.py  indexer.py  pipeline.py  progress.py  soft_delete.py  sync.py  vector_store.py
app/ingestion/chunker/: __init__.py  attachment.py  base.py  body.py  metadata.py  storage_format.py  tokenizer.py
app/ingestion/embedder/: __init__.py  base.py  dense.py  sparse.py
app/ingestion/extractor/: __init__.py  base.py  docx.py  pdf.py  spreadsheet.py
app/ingestion/workers/: __init__.py  chunking_main.py  chunking_worker.py  consumer.py  ingest_job_main.py  ingestion_worker.py  publisher.py  sync_worker.py
app/schemas/: __init__.py  chunk.py  enums.py  page_object.py
app/storage/: __init__.py  chunk_lookup.py  ingest_jobs.py  jobs.py  mongo_cache.py  qdrant_client.py  qdrant_fake.py  raw_store.py  space_doc_type_cache.py  sync_logs.py
docs/: architecture.md  atlassian-api.md  db-schema.md
docs/adr/: 0001-page-level-acl-source.md
docs/ai/: current-plan.md  featureI-8-internal-auth-key-runbook.md  rabbitmq-completion-event-guide.md  workflow.md  working-log.md
samples/: README.md
scripts/: format.sh  lint.sh  test.sh  verify.sh
tests/: __init__.py  test_config.py  test_scaffold.py
tests/adapters/: __init__.py  test_admin_client.py  test_atlassian.py  test_confluence_trash.py  test_json_fixture.py
tests/api/: __init__.py  test_ingest_completion.py  test_ingest_deps_real_mode.py  test_ingest_route.py  test_webhook_route.py
tests/ingestion/: __init__.py  test_attachment_downloader.py  test_attachment_extractor.py  test_bootstrap.py  test_bootstrap_attachment_downloader.py  test_chunking_worker.py  test_completion_events.py  test_consumer.py  test_crawler.py  test_document_analyzer.py  test_ingest_job_main.py  test_ingestion_worker.py  test_pipeline_e2e.py  test_publisher.py  test_qdrant_fake.py  test_raw_store.py  test_soft_delete.py  test_sync.py  test_sync_worker.py
tests/integration/: test_completion_queue_integration.py
tests/storage/: __init__.py  test_ingest_jobs.py  test_sync_logs.py
