# 작성자 : 최태성
# 담당 영역 : ingestion

[project]
name = "lina-data-ingestion-pipeline"
version = "0.1.0"
description = "척척학사(LINA) Confluence 기반 RAG 챗봇 서비스의 데이터 수집 파이프라인 (Ingestion / Sync / Chunking / Embedding)"
requires-python = ">=3.11,<3.12"
dependencies = [
    # --- AI Agents (ai-agent 레포에서 설치 — in-repo vendoring 대체)
    "lina-ai-agents @ git+https://github.com/skala-final-project-team7/ai-agent.git@v0.1.9",
    # --- 런타임 / 설정 ---
    "pydantic>=2.7",
    "pydantic-settings>=2.3",      # app/config.py 환경 변수 설정
    "httpx>=0.27",
    "tenacity>=8.3",               # Confluence/외부 호출 재시도
    # --- 수집 HTTP API (api-spec §2-2/§2-3/§2-4-2: /ml/ingest, status, health) ---
    "fastapi>=0.111,<0.137",              # 수집 트리거/상태/헬스 HTTP 엔드포인트
    "uvicorn>=0.30",               # ASGI 서버 (app.api.main:app 실행 진입점)
    # --- LLM (문서 분석기 — doc_type 분류, FR-003 [Agent]) ---
    "openai>=1.30",                # GPT-4o-mini + Function Calling (스페이스 단위 doc_type 판별)
    "tiktoken>=0.7",               # 토큰 카운팅
    # --- 메시지 큐 (비동기 수집 파이프라인) ---
    "pika>=1.3",                   # RabbitMQ — Ingestion / Attachment / Chunking / Embedding Queue
    # --- 데이터 저장소 클라이언트 ---
    "qdrant-client>=1.9",          # Multi-Pool Vector Store upsert
    "pymongo>=4.7",                # raw_pages / raw_attachments(extracted_text 포함) / ingestion_jobs / embedding_cache
    "sqlalchemy>=2.0",             # space_doc_type_cache (MySQL)
    "pymysql>=1.1",
    # --- 운영 모니터링 ---
    "prometheus-client>=0.20",     # Worker 커스텀 메트릭 (수집/청킹/임베딩 잡 카운터·지연)
    "prometheus-fastapi-instrumentator>=7.0,<8",  # HTTP API /metrics (RAG Pipeline 앱과 동일 패턴)
]

[project.optional-dependencies]
# 임베딩 / Sparse 토크나이저 (heavy — torch 포함)
embedding = [
    "sentence-transformers>=3.0",  # multilingual-e5-large Dense 임베딩
    "fastembed>=0.3",              # BM25 Sparse 벡터
    "kiwipiepy>=0.17",             # 한국어 형태소 분석 (Sparse 토크나이저, JDK 불필요)
]
# 데이터 수집 / 첨부 파일 텍스트 추출 / 본문 파싱
ingestion = [
    "atlassian-python-api>=3.41",  # Confluence REST 직접 호출 (Full Crawl / Delta Sync)
    "pymupdf>=1.24",               # PDF 텍스트 추출 (1순위, fitz)
    "pdfplumber>=0.11",            # PDF fallback (복잡 레이아웃)
    "python-docx>=1.1",            # Word 첨부
    "openpyxl>=3.1",               # Excel 첨부
    "pandas>=2.2",                 # Excel/CSV 직렬화
    "beautifulsoup4>=4.12",        # Confluence Storage Format(HTML) 파싱
    "lxml>=5.2",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]
# ai-agent(lina-ai-agents)로 설치되는 Data Ingestion / Data Sync Agent 의 LangGraph
# workflow (선택). 미설치 시 두 에이전트 모두 sequential fallback 으로 동작한다.
agents = [
    "langgraph>=0.2,<0.3",
]

[project.scripts]
# Chunking+Embedding Worker 실행 진입점 (배포 전 점검 fix, 2026-06-11).
# python -m app.ingestion.workers.chunking_main 과 동일하다.
ingestion-chunking-worker = "app.ingestion.workers.chunking_main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, B: bugbear, UP: pyupgrade
select = ["E", "W", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = [
]
